@@ -15,6 +15,8 @@ Revision history for Hailo
 
     - Word tokenizer: Match various prefixes and postfixes with numbers
 
+    - Word tokenizer: Match "#1" and "#1234" as single tokens
+
 0.68 2011-05-03 13:16:05
 
     - Speed up the learning of repetitive sentences by caching more
